# ReceiptParser

./: .flaskenv  .gitignore  .pre-commit-config.yaml  README.md  config.toml  pyproject.toml  requirements.txt
receiptparser/: app.py  doc_intel_receipt.py  extract.py  extractors.py
receiptparser/templates/: upload.html
